Introduce armor type to differentiate PHYSICAL and ENERGY armors. Former armors are all PHYSICAL. A character now can have more than one armor. (In fact at most one PHYSICAL and one ENERGY.) ENERGY_SHIELD spell creates an ENERGY armor which absorbs all damage while it has enough durability. It provides some additional defense too, so it behaves like an armor. Every use of ENERGY_SHIELD fills its potential to the maximum and not adds to the remaining energy. When absorbing damage, ENERGY_SHIELD starts the line of armors (but not shields) and absorbs damage up to its capacity before other armors would be affected. Removing blessing effects after a while does not remove ENERGY_SHIELD. It is active while its protection last.